[project]
name = "zipvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "lhotse==1.31.1",
    "k2==1.24.4.dev20250807+cuda12.8.torch2.8.0",
    "safetensors==0.6.2",
    "tensorboard==2.20.0",
    "vocos==0.1.0",
    "pydub==0.25.1",

    # Normalization
    "cn2an==0.5.23",
    "inflect==7.5.0",

    # Tokenization
    "jieba==0.42.1",
    "piper_phonemize==1.3.0",
    "pypinyin==0.55.0",
]

[[tool.uv.index]]
name = "k2-cuda"
url = "https://k2-fsa.github.io/k2/cuda.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "piper-phonemize"
url = "https://k2-fsa.github.io/icefall/piper_phonemize.html"
format = "flat"
explicit = true

[tool.uv.sources]
k2 = { index = "k2-cuda" }
piper_phonemize = { index = "piper-phonemize" }
